# RAG-LLM-MCP-Strategy-Builder

./: .env.backup_for_reinstall  .env.example  .gitignore  PROJECT_REPORT.md  README.md  Streak_Indicators_Final_Bullish_Bearish.xlsx  build_indicators_workbook.py  docker-compose.yml  implementation_plan.md  package.json  streak_trading_strategies.xlsx  task.md  test_api_backtest.py  test_parser.py  test_react_format.py  test_vbt.py  test_yf.py
backend/: Dockerfile  company_profiles.csv  pyproject.toml  seed_30_strategies.py  seed_strategies.py  test_custom_payload.py  test_db_categories.py  test_db_strats.py
backend/app/: __init__.py  config.py  llm.py  main.py  nl_parser.py
backend/app/agent/: __init__.py  graph.py  memory.py  nodes.py  prompts.py  state.py
backend/app/api/: __init__.py  routes_backtest.py  routes_chat.py  routes_independent_strategy.py  routes_market.py  routes_mcp.py  routes_options_backtest.py  routes_pipeline.py  routes_strategy.py
backend/app/backtest/: __init__.py  advanced.py  cache.py  engine.py  export.py  indicator_db.py  indicators.py  metrics.py  ohlcv_export.py  optimizer.py  options_chain_engine.py  options_engine.py  options_payoff.py  parallel.py
backend/app/db/: backtest_store.py  migrate.py  models.py  options_chain_store.py  pine_indicator_store.py  pine_store.py  session.py  task_store.py
backend/app/execution/: live_runner.py  paper_broker.py  store.py
backend/app/market/: cache.py  greeks.py  ingest_progress.py  nse_fo_bhavcopy.py  ohlcv_refresh.py  parquet_store.py  provider_base.py  provider_nse.py  provider_yfinance.py
backend/app/mcp/: __init__.py  server.py  tool_analyse_greeks.py  tool_analyze_backtest.py  tool_fetch_market.py  tool_query_strategy.py  tool_run_backtest.py
backend/app/rag/: chunker.py  embedder.py  indexer.py  qdrant_client.py
backend/app/strategies/: compiler.py  pine_ai.py  pine_indicator_catalog.py  pine_parser.py  suggestions.py  templates.py
backend/scripts/: backfill_equity_backtests.py  index_indicators.py  index_strategies.py  ingest_all_nse.py  ingest_historical.py  ingest_indices.py  ingest_missing.py  ingest_nifty_options_history.py  ingest_options_chain.py  refresh_ohlcv_daily.py  run_scheduler.py  seed_auto_strategies.py  seed_independent_strategies.py  seed_institutional.py
frontend/: Dockerfile  docker-entrypoint.sh  index.html  legacy.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
infra/nginx/: nginx.conf
infra/postgres/: init.sql
infra/qdrant/: config.yaml
infra/redis/: redis.conf
training/: Modelfile  requirements-train.txt
training/configs/: embedding_config.yaml  qlora_config.yaml
training/rl/: __init__.py  (+3 more)
(+54 files in other folders)
