[project]
name = "quantagent-backend"
version = "0.1.0"
description = "Quant AI Agent — FastAPI backend with MCP tools, LangGraph agent, and RAG"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    # ── Web framework ──
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "websockets>=13.0",
    "python-multipart>=0.0.12",

    # ── Database ──
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # ── Cache ──
    "redis>=5.2.0",

    # ── Agent framework ──
    "langchain>=0.3.7",
    "langchain-community>=0.3.7",
    "langgraph>=0.2.0",
    "langchain-ollama>=0.2.0",

    # ── RAG / Vector store ──
    "qdrant-client>=1.12.0",
    "sentence-transformers>=3.3.0",

    # ── Market data ──
    "yfinance>=0.2.46",
    "aiohttp>=3.11.0",
    "requests>=2.32.0",

    # ── Backtesting ──
    "vectorbt>=0.26.2",

    # ── Options Greeks ──
    "scipy>=1.14.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",

    # ── MCP ──
    "mcp>=1.1.0",

    # ── Utilities ──
    "httpx>=0.27.0",
    "orjson>=3.10.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
