[project]
name = "quant-backend"
version = "0.1.0"
description = "Quant AI Agent Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.3.4",
    "sqlalchemy>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "yfinance>=0.2.40",
    "requests>=2.32.3",
    "aiohttp>=3.9.5",
    "redis>=5.0.6",
    "qdrant-client>=1.9.1",
    "sentence-transformers>=3.0.1",
    "vectorbt>=0.25.6",
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "scipy>=1.13.1",
    "py-vollib>=1.0.1",
    "langchain>=0.2.5",
    "langgraph>=0.0.66",
    "langchain-community>=0.2.5",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.1",
    "greenlet>=3.0.3"
]
